[tool.poetry]
name = "docker-llms"
version = "0.1.0"
description = ""
authors = ["Ivan Gabriele <ivan.gabriele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
fschat = "^0.2.31"
python-dotenv = "^1.0.0"
huggingface = "^0.0.1"
huggingface-hub = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
